samples/_failures_safe/1761726395_3df409_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66e415e6.c: In function ‘main’:
./samples/SAFE/__tmp_66e415e6.c:150:5: error: expected expression at end of input
  150 |     if (memcmp(input_data, decompressed, input_size) != 0)
      |     ^~
./samples/SAFE/__tmp_66e415e6.c:150:5: error: expected declaration or statement at end of input
